# recrypt

./: README.md  pyproject.toml
src/: app.py  settings.py
src/classes/: key_word.py  word.py
tests/classes/: test_key_word.py  test_word.py
